<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailHero">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp"
        app:cardMaxElevation="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">


            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="15dp"
                tools:src="@tools:sample/avatars"
                android:contentDescription="@string/imageLogo" />

            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/img_item_photo"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="3dp"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/heroes_name" />

            <TextView
                android:id="@+id/tv_item_peringkatPT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/img_item_photo"
                android:layout_below="@id/tv_item_name"
                android:layout_marginBottom="10dp"
                android:textSize="14sp"
                android:fontFamily="sans-serif-thin"
                android:text="@string/peringkat_pt" />

            <TextView
                android:id="@+id/statusPT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status_perguruan_tinggi"
                android:layout_toEndOf="@id/img_item_photo"
                android:layout_below="@id/tv_item_peringkatPT"
                android:layout_marginBottom="3dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_item_statusPT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/img_item_photo"
                android:layout_below="@id/statusPT"
                android:layout_marginBottom="10dp"
                android:textSize="14sp"
                android:fontFamily="sans-serif-thin"
                android:text="@string/status_pt"
                />

            <TextView
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_item_photo"
                android:layout_marginBottom="3dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/deskripsi"/>

            <TextView
                android:id="@+id/tv_item_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/desc"
                android:layout_marginBottom="10dp"
                android:textSize="16sp"
                android:fontFamily="sans-serif-thin"
                tools:text="@string/detail" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>