<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp"
        app:cardMaxElevation="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_item_photo"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_toEndOf="@id/img_item_photo"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/heroes_name" />

            <TextView
                android:id="@+id/tv_item_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_item_name"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_toEndOf="@id/img_item_photo"
                android:ellipsize="end"
                android:maxLines="3"
                android:textSize="16sp"
                android:fontFamily="sans-serif"
                tools:text="@string/detail" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_item_detail"
                android:layout_toEndOf="@id/img_item_photo"
                android:text="@string/read_more"
                android:textAlignment="textEnd"
                android:textSize="12sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>